; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_ginxlog.c_ginRedoCreatePTree.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_ginxlog.c_ginRedoCreatePTree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@GIN_DATA = common dso_local global i32 0, align 4
@GIN_LEAF = common dso_local global i32 0, align 4
@GIN_COMPRESSED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*)* @ginRedoCreatePTree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ginRedoCreatePTree(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %3, align 4
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %12 = call i8* @XLogRecGetData(%struct.TYPE_7__* %11)
  %13 = bitcast i8* %12 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %13, %struct.TYPE_6__** %4, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %15 = call i32 @XLogInitBufferForRedo(%struct.TYPE_7__* %14, i32 0)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @BufferGetPage(i32 %16)
  store i64 %17, i64* %7, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @GIN_DATA, align 4
  %20 = load i32, i32* @GIN_LEAF, align 4
  %21 = or i32 %19, %20
  %22 = load i32, i32* @GIN_COMPRESSED, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @GinInitBuffer(i32 %18, i32 %23)
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %26 = call i8* @XLogRecGetData(%struct.TYPE_7__* %25)
  %27 = getelementptr inbounds i8, i8* %26, i64 4
  store i8* %27, i8** %5, align 8
  %28 = load i64, i64* %7, align 8
  %29 = call i32 @GinDataLeafPageGetPostingList(i64 %28)
  %30 = load i8*, i8** %5, align 8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @memcpy(i32 %29, i8* %30, i32 %33)
  %35 = load i64, i64* %7, align 8
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @GinDataPageSetDataSize(i64 %35, i32 %38)
  %40 = load i64, i64* %7, align 8
  %41 = load i32, i32* %3, align 4
  %42 = call i32 @PageSetLSN(i64 %40, i32 %41)
  %43 = load i32, i32* %6, align 4
  %44 = call i32 @MarkBufferDirty(i32 %43)
  %45 = load i32, i32* %6, align 4
  %46 = call i32 @UnlockReleaseBuffer(i32 %45)
  ret void
}

declare dso_local i8* @XLogRecGetData(%struct.TYPE_7__*) #1

declare dso_local i32 @XLogInitBufferForRedo(%struct.TYPE_7__*, i32) #1

declare dso_local i64 @BufferGetPage(i32) #1

declare dso_local i32 @GinInitBuffer(i32, i32) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local i32 @GinDataLeafPageGetPostingList(i64) #1

declare dso_local i32 @GinDataPageSetDataSize(i64, i32) #1

declare dso_local i32 @PageSetLSN(i64, i32) #1

declare dso_local i32 @MarkBufferDirty(i32) #1

declare dso_local i32 @UnlockReleaseBuffer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
